# multicloud-security-baseline-nist-iso-demo

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
artifacts/after/: controls_coverage.csv  summary.json
artifacts/before/: controls_coverage.csv  summary.json
artifacts/compare/: compare.json  remediation_backlog.csv  roadmap.csv
artifacts/report/: report.html  report.md
docs/: controls-mapping.md  methodology.md  schema.md
fixtures/after/: findings.json  targets.json
fixtures/before/: findings.json  targets.json
src/msb/: __main__.py  cli.py  compare.py  demo_flow.py  models.py
src/msb/io/: artifacts.py  fixtures.py
src/msb/mappings/: __init__.py  mapper.py
src/msb/mappings/data/: finding_category_to_controls.json
src/msb/prioritization/: __init__.py  planner.py
src/msb/reporting/: __init__.py  render.py
src/msb/reporting/templates/: report.html.j2
src/msb/scoring/: __init__.py  assess.py  risk.py
src/msb/utils/: logging.py
tests/: test_mapping.py  test_prioritization.py  test_risk_scoring.py  test_schema_validation.py  test_smoke_demo.py
tests/integration/: test_assess_compare.py
