[project]
name = "multicloud-security-baseline"
version = "0.1.0"
description = "Local-first multi-cloud security baseline assessment demo (NIST CSF + ISO 27001 themes)."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Freddy D. Alvarez", email = "falvarezpinto@gmail.com" }]
dependencies = [
  "pydantic>=2.6,<3",
  "typer>=0.12,<1",
  "rich>=13.7,<14",
  "jinja2>=3.1,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "pytest-cov>=5.0,<6",
  "ruff>=0.6,<1",
  "mypy>=1.8,<2",
  "types-jinja2>=2.11.9",
]

[project.scripts]
msb = "msb.cli:app"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
msb = [
  "mappings/data/*.json",
  "reporting/templates/*.j2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/msb/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
warn_unused_configs = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "smoke: validates the README demo flow",
  "slow: long-running tests",
]
